remove some overkill code generation. some refactoring. some comments.